# ecom-dApp

./: .gitignore  Heap.20251018.214654.65099.0.001.heapprofile  Heap.20251018.214750.70299.0.001.heapprofile  package.json  pnpm-lock.yaml  tsconfig.json
anchor/: Anchor.toml  package.json
anchor/programs/anchor/: Cargo.toml
anchor/programs/anchor/src/: error.rs  lib.rs
anchor/programs/anchor/src/instructions/: add_to_cart.rs  create_order.rs  create_payment.rs  create_product.rs  list_product.rs  mod.rs
anchor/programs/anchor/src/states/: cart.rs  escrow.rs  mod.rs  order.rs  payment.rs  product.rs
anchor/tests/: anchor.ts
app/: layout.tsx  page.tsx
app/Components/: Appbar.tsx  Products.tsx  WalletConnect.tsx
app/Components/HomePage/: Main.tsx  Products.tsx
app/cart/: page.tsx
app/checkout/: page.tsx
app/config/: products.example.ts
app/createproduct/: page.tsx
app/lib/: anchor.ts  program.ts
app/product/[...]/: page.tsx
backend/: package-lock.json  package.json  pnpm-lock.yaml
backend/src/util/: logger.ts
sdk/: package.json  program.js  test.js
